# lab5e

./: CMakeLists.txt  main.c
libs/algorithms/: algorithms.c  algorithms.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/string_/: string_.c  string_.h
libs/data_structures/string_/tasks/: task1.h  task10.h  task11.h  task12.h  task13.h  task14.h  task15.h  task16.h  task17.h  task18.h  task19.h  task2.h  task3.h  task4.h  task5.h  task6.h  task7.h  task8.h  task9.h
