add_library(data_structures
        string_/string_.c
        string_/tasks/task1.h
        string_/tasks/task2.h
        string_/tasks/task3.h
        string_/tasks/task4.h
        string_/tasks/task5.h
        string_/tasks/task6.h
        string_/tasks/task7.h
        string_/tasks/task8.h
        string_/tasks/task9.h
        string_/tasks/task10.h
        string_/tasks/task11.h
        string_/tasks/task12.h
        string_/tasks/task13.h
        string_/tasks/task14.h
        string_/tasks/task15.h)

target_link_libraries(data_structures algorithms)